kubernetes/apps/database/cloudnative-pg/pgadmin/route.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin
spec:
  hostnames:
  - "pgadmin.${SERVER_DOMAIN}"
  - "pg.${SERVER_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: pgadmin
          namespace: database
          port: 5050
